--- a/index.html
+++ b/index.html
@@ -53,11 +53,14 @@
     </div>
 </section>
 <aside class="aside">
-    <h2>Places to visit</h2>
+    <h2>Top 5 Places to visit</h2>
+    <p>According to polls</p>
     <ol>
         <li>Jacksonville</li>
         <li>Orlando</li>
-        <li>BEACHES</li>
+        <li>Tampa</li>
+        <li>Destin</li>
+        <li>Miami</li>
     </ol>
     <p class="paside">Florida has many cities and things to do. Anywhere you go throuhgout the state has a plentiful amount of things to do. So you will never be bored when you visit Florida.</p>
 </aside>
