--- a/orlando.html
+++ b/orlando.html
@@ -23,7 +23,8 @@
 <section class="section">
     <h2>City of Orlando</h2>
     <p class="section_p">Orlando is the home to tourism. It is home to many theme parks including Walt Disny World, Universal Studio Orlando, and seaworld. Orlando offers a vast amount of places to stay and have fun. The city brings home 59 million tourist each year to experience what it has to offer, domestic and international. Orlando is home to 324,429 people. It also has over 100 lakes in the area and many differnt animals people can see. </p>
-    <img class="miamijpg" src="disney.jpg" alt="picture of magic kingdom">
+    <p>The city was founded in 1885, it's considered an urban area. It's located in central florida and the average income is $58,819 and the state is $59,227.</p>
+    <img class="absolute" src="disney.jpg" alt="picture of magic kingdom">
 </section>
 <aside class="aside">
     <h3>Things to do</h3>
