--- a/tallahasee.html
+++ b/tallahasee.html
@@ -23,6 +23,7 @@
 <section class="section">
     <h2>City of Tallahassee</h2>
     <p class="section_p">Tallahassee is the capital of Florida. It is home to Florida State University and has a population of 205,536. It was established in 1824. Tallahasse has a stupid population of 70,000 students betwenn the different universities within the city. As the capital, Tallahassee is the site of the Florida State Capitol, Supreme Court of Florida, Florida Governor's Mansion, and nearly 30 state agency headquarters </p>
+    <p>Tallahasse is located in north Florida with an avergae income of $52,899 while the state of Florida is $59,227. It was established in 1824 and is considered an urban area.</p>
     <img class="miamijpg" src="tallahassee.jpg" alt="downtown tallahassee">
 </section>
 <aside class="aside">
