--- a/miami.html
+++ b/miami.html
@@ -22,6 +22,7 @@
 <section class="section">
     <h2>City of Miami</h2>
     <p class="section_p">Miami is considered the 9th largest city in population in the United States of America, with a population of 456,229. Miaimi has one of the best beaches to go to and a major spring break tourist spot for many individuals.Miami has the third-largest skyline in the U.S. with over 300 high-rises. Miami is the only Major City in the United States that was founded by a woman. Miami has a huge hispanic community with a lot of different background of foods.  </p>
+    <p>Miami was established in 1896 with an average income of $60,989 while the state of Florida is $59,227. Miami is located in south Florida and considered an urban area. </p>
     <div>
         <img class="miamijpg" src="miami.jpg" alt="Beach with miami">
     </div>
