--- a/tampa.html
+++ b/tampa.html
@@ -23,7 +23,8 @@
 <section class="section">
     <h2>City of Tampa</h2>
     <p class="section_p">Tampa home to the Tampa bay buccaneers and Tampa bay Rays, and is considered the third largest city in Florida. Tampa was reincorporated as a city after the civil war in 1887. The city has a lot of history and many historical areas to visit. It has some beautiful beaches and flies under the radar for many tourist and locals. It has a population of 408,438.  </p>
-    <img class="miamijpg" src="tampa.jpeg" alt="Photo of downtown tampa">
+    <p>Tampa is located near the west central Florida with an average income of $60,610 while the states average income is $59,227. Tampa is considered an urban area with being a bigger city. Tampa was established in 1874.</p>
+    <img class="relative" src="tampa.jpeg" alt="Photo of downtown tampa">
 </section>
 <aside class="aside">
     <h3>Things to do</h3>
